--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "calkulator",
+  "name": "calculator",
   "version": "1.0.0",
   "description": "",
-  "main": "config.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node config.js"
+    "start": "node index.js"
   },
   "author": "ArtoLord",
   "license": "ISC",
